--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bkciccar/miniconda3/envs/thesis/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
       "==((====))==  Unsloth 2025.2.12: Fast Mistral patching. Transformers: 4.49.0.\n",
       "   \\\\   /|    GPU: NVIDIA A100-SXM4-80GB. Max memory: 79.254 GB. Platform: Linux.\n",
       "O^O/ \\_/ \\    Torch: 2.6.0+cu124. CUDA: 8.0. CUDA Toolkit: 12.4. Triton: 3.2.0\n",
@@ -21,8 +37,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Unsloth 2025.2.12 patched 32 layers with 32 QKV layers, 32 O layers and 32 MLP layers.\n",
       "Repo card metadata block was not found. Setting CardData to empty.\n",
-      "Downloading data:  71%|███████   | 76/107 [05:19<02:15,  4.36s/files]"
+      "Downloading data: 100%|██████████| 107/107 [00:00<00:00, 708.59files/s]\n",
+      "Generating train split: 0 examples [00:00, ? examples/s]"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -51,10 +80,54 @@
     "    random_state=3407,\n",
     "    use_rslora=False,\n",
     "    loftq_config=None,\n",
-    ")\n",
-    "\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bkciccar/miniconda3/envs/thesis/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Repo card metadata block was not found. Setting CardData to empty.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
     "from datasets import load_dataset\n",
-    "dataset = load_dataset(\"PleIAs/Italian-PD\", split=\"train\")\n",
+    "\n",
+    "# Load the dataset in streaming mode\n",
+    "dataset = load_dataset(\"PleIAs/Italian-PD\", split=\"train\", streaming=True)\n",
+    "\n",
+    "# Process a few examples to test\n",
+    "for i, example in enumerate(dataset):\n",
+    "    if i >= 10:\n",
+    "        break\n",
+    "    print(example)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
@@ -119,7 +192,7 @@
     "_ = model.generate(input_ids=inputs[\"input_ids\"], streamer=text_streamer, max_new_tokens=128, use_cache=True)\n",
     "\n",
     "model.save_pretrained(\"lora_model\")\n",
-    "tokenizer.save_pretrained(\"lora_model\")\n"
+    "tokenizer.save_pretrained(\"lora_model\")"
    ]
   }
  ],
